fix: Fix possible flickering issue with the scrollbar

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,6 +34,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   -webkit-overflow-scrolling: touch;
   font-size: 14px;
+  overflow-y: scroll;
 }
 
 footer,
